Text in Contact Section

--- a/index.html
+++ b/index.html
@@ -378,6 +378,7 @@
             </div>
 
             <div class="col-lg-8 mt-5 mt-lg-0">
+              <p class="send-mail-txt">Envíe un correo rellenando este formulario</p>
               <form id="contact-form" action="" method="post" target="_blank">
                 <div class="row">
                   <div class="col-md-6 form-group">
@@ -398,7 +399,6 @@
                 <div class="text-center">
                   <button name="mail-btn" id="mail-btn" type="submit">Enviar</button>
                   <div class="msg mt-3 mb-3"></div>
-                  <!-- <input type="button" id="mail-btn" value="Enviar"> -->
                 </div>
                 <div class="blank-space"></div>
               </form>
